add database & user, allow remote connection

--- a/node/playbooks/mysql_setup.yml
+++ b/node/playbooks/mysql_setup.yml
@@ -21,23 +21,18 @@
   - name: Install PyMySQL python package
     pip:
       name: PyMySQL
-
-  - name: Change the authentication plugin of MySQL root user to mysql_native_password
-    shell: mysql -u root -e 'UPDATE mysql.user SET plugin="mysql_native_password" WHERE user="root" AND host="localhost"'
-    run_once: true
-
-  - name: Flush Privileges
-    shell: mysql -u root -e 'FLUSH PRIVILEGES'
-    run_once: true
-
-  - name: Set MySQL root password
-    mysql_user:
-      login_host: 'localhost'
-      login_user: 'root'
-      login_password: ''
-      name: 'root'
-      password: '{{ root_pass }}'
-      state: present
-    run_once: true
-
   
+  - name: Ensure mysqld is listening to all ip
+    ini_file:
+      path: /etc/mysql/my.cnf
+      section: mysqld
+      option: bind-address
+      value: 0.0.0.0
+      backup: yes
+    register: service_conf
+  
+  - name: restart mysqld
+    service:
+      name: mysqld
+      state: restarted
+    when: service_conf.changed
