setup nginx to host dev and prod

--- a/node/playbooks/mysql_setup.yml
+++ b/node/playbooks/mysql_setup.yml
@@ -36,3 +36,7 @@
       name: mysqld
       state: restarted
     when: service_conf.changed
+  - name: set hostname
+    copy:
+      dest: "/etc/hostname"
+      content: mysql.lan.feydis.be
