--- a/node/playbooks/all.yml
+++ b/node/playbooks/all.yml
@@ -10,7 +10,7 @@
       name: ['vim', 'dnsutils', 'ldnsutils', 'ldnsutils', 'python3-pip']
       state: present
 
-  - name: setup dns
+  - name: setup ssh
     copy:
       src: files/authorized_keys
       dest: /home/pi/.ssh/authorized_keys
@@ -21,9 +21,6 @@
     copy:
       src: files/resolv.conf
       dest: /etc/resolv.conf
-      owner: root
-      group: root
-      mode: u=rw,g=rw,o=r
   - name: copy public keys
     copy:
       src: files/authorized_keys
@@ -32,13 +29,13 @@
       group: pi
       mode: 0600
 
-  - name: Allow 'sudo' group to have passwordless sudo
-    lineinfile:
-      dest: /etc/sudoers
-      state: present
-      regexp: '^%sudo'
-      line: '%sudo ALL=(ALL) NOPASSWD: ALL'
-      validate: 'visudo -cf %s'
+  # - name: Allow 'sudo' group to have passwordless sudo
+  #   lineinfile:
+  #     dest: /etc/sudoers
+  #     state: present
+  #     regexp: '^%sudo'
+  #     line: '%sudo ALL=(ALL) NOPASSWD: ALL'
+  #     validate: 'visudo -cf %s'
 
   - name: Disable root login over SSH
     lineinfile: dest=/etc/ssh/sshd_config regexp="^PermitRootLogin" line="PermitRootLogin no" state=present
